--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
                 <div>
                     <label for="model-name-input" class="block text-sm font-medium text-slate-700 mb-1">模型名称</label>
-                    <input type="text" id="model-name-input" class="w-full p-2 border border-slate-300 rounded-lg" placeholder="gemini-2.5-flash-lite">
+                    <input type="text" id="model-name-input" class="w-full p-2 border border-slate-300 rounded-lg" placeholder="models/gemini-2.5-flash-lite">
                 </div>
             </div>
             <div class="mt-8 flex justify-end gap-4">
