--- a/index.html
+++ b/index.html
@@ -126,8 +126,11 @@
             <div class="space-y-4">
                 <div>
                     <label class="block text-sm font-medium text-slate-700 mb-2">预设</label>
-                    <div class="grid grid-cols-3 gap-2">
+                    <div class="grid grid-cols-2 gap-2 mb-2">
                         <button id="preset-gemini" onclick="applyPreset('gemini')" class="preset-btn font-semibold py-2 px-4 rounded-lg transition-colors text-sm">Gemini</button>
+                        <button id="preset-gemini-proxy" onclick="applyPreset('gemini-proxy')" class="preset-btn font-semibold py-2 px-4 rounded-lg transition-colors text-sm">Gemini (中转)</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-2">
                         <button id="preset-deepseek" onclick="applyPreset('deepseek')" class="preset-btn font-semibold py-2 px-4 rounded-lg transition-colors text-sm">DeepSeek</button>
                         <button id="preset-custom" onclick="applyPreset('custom')" class="preset-btn font-semibold py-2 px-4 rounded-lg transition-colors text-sm">自定义</button>
                     </div>
