去除推荐值

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
                 <div>
                     <label for="model-name-input" class="block text-sm font-medium text-slate-700 mb-1">模型名称</label>
-                    <input type="text" id="model-name-input" class="w-full p-2 border border-slate-300 rounded-lg" placeholder="gemini-2.5-flash-lite" list="model-suggestions">
+                    <input type="text" id="model-name-input" class="w-full p-2 border border-slate-300 rounded-lg" placeholder="输入模型名称" list="model-suggestions">
                     <datalist id="model-suggestions">
                         <option value="gemini-2.5-flash-lite">Gemini 2.5 Flash Lite (推荐)</option>
                         <option value="gemini-2.5-flash">Gemini 2.5 Flash</option>
