--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
                         </svg>
-                        M4tr1x小红书
+                        作者主页
                     </a>
                     <a href="https://kcnxxrk5hrp3.feishu.cn/share/base/form/shrcnKmLYAm9Q1WcUB2KKdRxPwb" target="_blank" rel="noopener noreferrer"
                        class="flex items-center gap-2 text-slate-600 hover:text-green-600 transition-colors">
@@ -145,7 +145,7 @@
                     </a>
                 </div>
                 <div class="text-xs text-slate-500">
-                    <p>© 2024 AI 智能单词陪练 - 让学习更智能，让进步更可见</p>
+                    <p>© 2025 AI 智能单词陪练 - 让学习更智能，让进步更可见</p>
                     <p class="mt-1">由大语言模型驱动，助力您的英语学习之旅</p>
                 </div>
             </div>
