--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 智能单词陪练 (V2.1)</title>
+    <title>AI 智能单词陪练 (V2.2)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.loli.net">
     <link rel="preconnect" href="https://gstatic.loli.net" crossorigin>
@@ -117,6 +117,24 @@
 
             </div>
         </main>
+
+        <!-- 作者自用词表 -->
+        <section class="mt-12 mb-8">
+            <div class="text-center mb-8">
+                <h2 class="text-2xl sm:text-3xl font-bold text-slate-900 mb-2">📚 作者自用词表</h2>
+                <p class="text-slate-600">精心整理的各类词汇表，一键加载即可开始学习</p>
+            </div>
+            
+            <div id="wordlists-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- 词表卡片将在这里动态加载 -->
+                <div class="flex items-center justify-center p-8 text-slate-400">
+                    <div class="text-center">
+                        <div class="loader mb-4"></div>
+                        <p>正在加载词表...</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- 页脚 -->
         <footer class="mt-12 pt-8 border-t border-slate-200">
