--- a/index.html
+++ b/index.html
@@ -136,6 +136,26 @@
             </div>
         </section>
 
+        <!-- 生词本 -->
+        <section id="vocabulary-book-section" class="mt-12 mb-8">
+            <div class="text-center mb-8">
+                <h2 class="text-2xl sm:text-3xl font-bold text-slate-900 mb-2">📓 我的生词本</h2>
+                <p class="text-slate-600">在划词翻译时添加的单词会出现在这里</p>
+            </div>
+            <div class="max-w-2xl mx-auto bg-white p-4 sm:p-6 rounded-2xl shadow-sm border border-slate-200">
+                <div id="vocabulary-book-container">
+                    <div id="vocabulary-book-list" class="space-y-2 max-h-96 overflow-y-auto pr-2">
+                        <!-- 生词本内容将在这里动态加载 -->
+                    </div>
+                </div>
+                <div class="mt-4 pt-4 border-t border-slate-200">
+                    <button id="load-vocab-button" onclick="loadVocabAsWordlist()" class="w-full bg-green-600 text-white py-2 px-4 rounded-lg hover:bg-green-700 transition-colors hidden">
+                        加载生词本进行学习
+                    </button>
+                </div>
+            </div>
+        </section>
+
         <!-- 页脚 -->
         <footer class="mt-12 pt-8 border-t border-slate-200">
             <div class="text-center space-y-4">
@@ -213,6 +233,7 @@
         </div>
     </div>
 
+    <script type="module" src="js/vocabulary-book.js"></script>
     <script type="module" src="js/main.js"></script>
 
     <!-- Duplicated settings modal removed -->
