--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                 <div id="learning-view" class="view">
                     <div class="mb-6 pb-6 border-b border-slate-200">
                         <h2 id="learning-word" class="text-4xl sm:text-5xl font-bold text-slate-900 break-all"></h2>
+                        <div id="learning-word-details" class="flex items-center gap-3 mt-2 text-slate-500 h-6"></div>
                         <p id="learning-progress" class="text-base sm:text-lg text-slate-500 mt-2"></p>
                     </div>
                     <div id="user-notes-container" class="mb-6 p-4 bg-slate-100 rounded-lg">
