--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
             </aside>
 
             <!-- 右侧主内容区 -->
-            <div class="lg:col-span-2 bg-white p-4 sm:p-6 md:p-8 rounded-2xl shadow-sm border border-slate-200">
+            <div class="lg:col-span-2 bg-white p-4 sm:p-6 md:p-8 rounded-2xl shadow-sm border border-slate-200 flex flex-col justify-center">
                 
                 <!-- 主页视图：文件上传 -->
                 <div id="home-view" class="view active">
-                    <div id="drop-zone" class="border-4 border-dashed border-slate-300 rounded-2xl h-96 flex flex-col items-center justify-center text-center p-4 sm:p-8 transition-colors">
+                    <div id="drop-zone" class="border-4 border-dashed border-slate-300 rounded-2xl h-64 flex flex-col items-center justify-center text-center p-4 sm:p-8 transition-colors">
                         <svg class="w-12 h-12 sm:w-16 sm:h-16 text-slate-400 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-4-4V7a4 4 0 014-4h10a4 4 0 014 4v5a4 4 0 01-4 4H7z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 11v6m0 0l-3-3m3 3l3-3"></path></svg>
                         <h3 class="text-xl sm:text-2xl font-bold text-slate-600">将 CSV 或 .json 进度文件拖拽至此</h3>
                         <p class="text-slate-500 mt-2">或者 <label for="file-input" class="text-blue-600 font-semibold cursor-pointer hover:underline">点击选择文件</label></p>
