--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-xl sm:text-2xl font-bold">我的单词列表</h2>
                     <div class="flex items-center gap-2">
-                        <button onclick="openSettingsModal()" title="设置" aria-label="打开设置" class="text-slate-500 hover:text-blue-600 p-1 rounded-full hover:bg-slate-100 transition-colors">
+                        <button onclick="openSettingsModal()" title="设置 (S)" aria-label="打开设置" class="text-slate-500 hover:text-blue-600 p-1 rounded-full hover:bg-slate-100 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
                         </button>
                         <div id="data-controls" class="flex gap-2 hidden">
@@ -138,12 +138,12 @@
                         <h3 class="text-2xl font-bold mb-3">情景挑战</h3>
                         <p class="text-lg text-slate-600 bg-blue-50 p-4 rounded-lg mb-4" id="challenge-sentence"></p>
                         <textarea id="translation-input" class="w-full p-3 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition" rows="3" placeholder="请在此输入你的翻译..."></textarea>
-                        <button onclick="submitTranslation()" class="mt-4 bg-green-600 text-white py-2 px-6 rounded-lg hover:bg-green-700 transition-colors font-bold">提交翻译</button>
+                        <button onclick="submitTranslation()" title="提交翻译 (Cmd/Ctrl + Enter)" class="mt-4 bg-green-600 text-white py-2 px-6 rounded-lg hover:bg-green-700 transition-colors font-bold">提交翻译</button>
                     </div>
                     <div id="feedback-container" class="mt-6 hidden">
                         <h3 class="text-2xl font-bold mb-3">AI 评判</h3>
                         <div id="feedback-content" class="p-4 rounded-lg"></div>
-                        <button onclick="nextStep()" class="mt-4 bg-blue-600 text-white py-2 px-6 rounded-lg hover:bg-blue-700 transition-colors font-bold">继续</button>
+                        <button onclick="nextStep()" title="继续 (Enter)" class="mt-4 bg-blue-600 text-white py-2 px-6 rounded-lg hover:bg-blue-700 transition-colors font-bold">继续</button>
                     </div>
                 </div>
 
@@ -160,7 +160,7 @@
                     <div id="test-feedback-container" class="mt-6 hidden">
                         <h3 class="text-2xl font-bold mb-3">AI 评判</h3>
                         <div id="test-feedback-content" class="p-4 rounded-lg"></div>
-                        <button onclick="nextTestQuestion()" class="mt-4 bg-indigo-600 text-white py-2 px-6 rounded-lg hover:bg-indigo-700 transition-colors font-bold">下一题</button>
+                        <button onclick="nextTestQuestion()" title="下一题 (Enter)" class="mt-4 bg-indigo-600 text-white py-2 px-6 rounded-lg hover:bg-indigo-700 transition-colors font-bold">下一题</button>
                     </div>
                 </div>
 
@@ -283,6 +283,7 @@
     </div>
 
     <script type="module" src="js/vocabulary-book.js"></script>
+    <script type="module" src="js/shortcuts.js"></script>
     <script type="module" src="js/main.js"></script>
 
     <!-- Duplicated settings modal removed -->
