--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
                     <div id="feedback-container" class="mt-6 hidden">
                         <h3 class="text-2xl font-bold mb-3">AI 评判</h3>
                         <div id="feedback-content" class="p-4 rounded-lg"></div>
-                        <button onclick="nextStep()" title="继续 (Enter)" class="mt-4 bg-blue-600 text-white py-2 px-6 rounded-lg hover:bg-blue-700 transition-colors font-bold">继续</button>
+                        <div id="feedback-actions" class="mt-4">
+                            <!-- Action buttons will be dynamically inserted here -->
+                        </div>
                     </div>
                 </div>
 
