情景关联题目

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                         <button onclick="startTest('construction')" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">创意造句</button>
                         <button onclick="startTest('reverse-translation')" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-lg hover:bg-indigo-700 transition-colors">逆向翻译</button>
                         <button onclick="startTest('cloze-test')" class="w-full bg-purple-600 text-white py-2 px-4 rounded-lg hover:bg-purple-700 transition-colors">完形填空</button>
+                        <button onclick="startTest('multi-word-challenge')" class="w-full bg-teal-600 text-white py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors">关联造句</button>
                     </div>
                 </div>
             </aside>
