--- a/index.html
+++ b/index.html
@@ -108,7 +108,14 @@
                         <button onclick="startTest('construction')" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">创意造句</button>
                         <button onclick="startTest('reverse-translation')" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-lg hover:bg-indigo-700 transition-colors">逆向翻译</button>
                         <button onclick="startTest('cloze-test')" class="w-full bg-purple-600 text-white py-2 px-4 rounded-lg hover:bg-purple-700 transition-colors">完形填空</button>
-                        <button onclick="startTest('multi-word-challenge')" class="w-full bg-teal-600 text-white py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors">关联造句</button>
+                        <div class="border border-teal-200 bg-teal-50/50 p-3 rounded-lg">
+                            <button onclick="startTest('multi-word-challenge')" class="w-full bg-teal-600 text-white py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors mb-3">关联造句</button>
+                            <div class="flex items-center gap-3">
+                                <label for="multi-word-slider" class="text-sm font-medium text-teal-800 whitespace-nowrap">单词数量:</label>
+                                <input type="range" id="multi-word-slider" min="2" max="10" value="3" class="w-full h-2 bg-teal-200 rounded-lg appearance-none cursor-pointer">
+                                <span id="multi-word-slider-value" class="text-sm font-bold text-teal-800 w-4 text-center">3</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </aside>
