--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 智能单词陪练 - 懂你的个性化单词学习工具</title>
+    <title>AI 智能单词陪练 (V2.5)</title>
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="AI智能单词陪练是一款由大语言模型驱动的个性化单词学习工具。通过创意造句、逆向翻译、完形填空等多种智能测试模式，结合情景挑战和AI实时反馈，帮助你高效、深入地掌握英语单词。">
